--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,17 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+
+    runtime 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0'
+    runtime 'org.springframework.data:spring-data-rest-hal-browser:3.1.0.RELEASE'
+
     compileOnly 'org.projectlombok:lombok'
+
     annotationProcessor 'org.projectlombok:lombok'
+
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.2'
+    testCompile 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
