--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 
+    compile 'com.github.cloudyrock.mongock:mongock-spring:2.0.0'
+    compile 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
+
     runtime 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0'
     runtime 'org.springframework.data:spring-data-rest-hal-browser:3.1.0.RELEASE'
 
