--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    implementation "org.springframework.security.oauth:spring-security-oauth2:2.3.5.RELEASE"
 
     compile 'com.github.cloudyrock.mongock:mongock-spring:2.0.0'
     compile 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
